@@ -1,4 +1,6 @@
+_2009_12_10__16_29_46_ Chi-Hsiu Liang
 
+  * Some stuff about one-dimensional Fourier grid Hamiltonian for hindered rotors.
 
 2009-December-5 Struan Robertson
 
